--- a/types/tag-search.html
+++ b/types/tag-search.html
@@ -1,4 +1,3 @@
-
 <section class="content-header grid-100 mobile-grid-100">
     <header>
         <h1>{$Site->getAttribute('title')}</h1>
@@ -17,8 +16,104 @@
 </section>
 {/if}
 
-<section class="content-template grid-100 mobile-grid-100">
+<section class="content-template grid-100 mobile-grid-100 quiqqer-tags-search"
+        data-qui="package/quiqqer/tags/bin/TagSearch"
+        >
 
-    <!-- Such Ergebnisse -->
+    <h2>Ausgewählte Themen:</h2>
+
+    <div class="quiqqer-tags-search-pool">
+        {foreach $requestTags as $requestTag}
+            {assign var=params value=$requestTagNames}
+            {assign var=key value=array_search($requestTag.tag, $requestTagNames)}
+            
+            <a href="{url site=$Site params=[$requestTag.tag]}" class="qui-tags-tag">
+                <span class="fa fa-minus"></span>
+                {$requestTag.tag}
+            </a>
+        {/foreach}
+    </div>
+
+    <div class="quiqqer-tags-search-available">
+        <h3>Vorhandene Themen:</h3>
+
+        <div class="quiqqer-tags-search-available-container">
+            <ul class="quiqqer-tags-search-menu grid-parent grid-100">
+                <li class="quiqqer-tags-search-menu-entry">
+                    <a href="{url site=$Site}" data-tag="^[abc]">A B C</a>
+                </li>
+                <li class="quiqqer-tags-search-menu-entry">
+                    <a href="{url site=$Site params=[def]}" data-tag="^[def]">D E F</a>
+                </li>
+                <li class="quiqqer-tags-search-menu-entry">
+                    <a href="{url site=$Site params=[ghi]}" data-tag="^[ghi]">G H I</a>
+                </li>
+                <li class="quiqqer-tags-search-menu-entry">
+                    <a href="{url site=$Site params=[jkl]}" data-tag="^[jkl]">J K L</a>
+                </li>
+                <li class="quiqqer-tags-search-menu-entry">
+                    <a href="{url site=$Site params=[mno]}" data-tag="^[mno]">M N O</a>
+                </li>
+                <li class="quiqqer-tags-search-menu-entry">
+                    <a href="{url site=$Site params=[pqr]}" data-tag="^[pqr]">P Q R</a>
+                </li>
+                <li class="quiqqer-tags-search-menu-entry">
+                    <a href="{url site=$Site params=[stu]}" data-tag="^[stu]">S T U</a>
+                </li>
+                <li class="quiqqer-tags-search-menu-entry">
+                    <a href="{url site=$Site params=[vz]}" data-tag="^[v-z]">V - Z</a>
+                </li>
+                <li class="quiqqer-tags-search-menu-entry">
+                    <a href="{url site=$Site params=[123]}" data-tag="^[0-9]">0 - 9</a>
+                </li>
+            </ul>
+
+            <div class="quiqqer-tags-search-available-pool">
+                {foreach from=$tags item=tag}
+                    {if !in_array($tag.tag, $requestTagNames)}
+                        {assign var=params value=$requestTagNames}
+                        {$params[] = $tag.tag}
+                        <a href="{url site=$Site params=$params}" class="qui-tags-tag animated">
+                            {$tag.title}
+                        </a>
+                    {/if}
+                {/foreach}
+            </div>
+        </div>
+    </div>
+
+    <div class="quiqqer-tags-search-results">
+        <h3>Ergebnis</h3>
+
+        {foreach $result as $Entry}
+        <article class="quiqqer-tags-search-result-entry">
+            <a href="{url site=$Entry}" class="quiqqer-tags-search-result-entry-link">
+                {if $Entry->getAttribute('image')}
+                    {image src=$Entry->getAttribute('image')
+                           class="quiqqer-tags-search-entry-image"
+                           width="100"
+                    }
+                {else}
+                <div class="quiqqer-tags-search-result-entry-imgplaceholder"
+                     style="background: url('{$Project->getMedia()->getPlaceholder()}') center center no-repeat"
+                        ></div>
+                {/if}
+
+                <div class="quiqqer-tags-search-result-entry-text">
+                    <h4>{$Entry->getAttribute('title')}</h4>
+                    <p>{$Entry->getAttribute('short')}</p>
+                </div>
+            </a>
+
+            <div class="quiqqer-tags-search-result-entry-taglist">
+                <span class="quiqqer-tags-search-result-entry-tagText">
+                    zugewiesene Tags:
+                </span>
+                {control assign=Control control="\QUI\Tags\Controls\SiteTags" Site=$Entry}
+                {$Control->getBody()}
+            </div>
+        </article>
+        {/foreach}
+    </div>
 
 </section>
