--- a/types/tag-search.html
+++ b/types/tag-search.html
@@ -27,6 +27,7 @@
             {assign var=params value=$requestTagNames}
             {assign var=key value=array_search($requestTag.tag, $requestTagNames)}
             {array_unset var=$params key=$key assign=params}
+            {array_sort var=$params assign=params}
 
             <a href="{url site=$Site params=$params}" class="qui-tags-tag">
                 <span class="fa fa-minus"></span>
@@ -39,7 +40,7 @@
         <h3>Vorhandene Themen:</h3>
 
         <div class="quiqqer-tags-search-available-container">
-            <ul class="quiqqer-tags-search-menu grid-parent grid-100">
+            <ul class="quiqqer-tags-search-menu grid-parent grid-100" style="display: none">
                 <li class="quiqqer-tags-search-menu-entry">
                     <a href="{url site=$Site}" data-tag="^[abc]">A B C</a>
                 </li>
@@ -74,6 +75,8 @@
                     {if !in_array($tag.tag, $requestTagNames)}
                         {assign var=params value=$requestTagNames}
                         {$params[] = $tag.tag}
+                        {array_sort var=$params assign=params}
+
                         <a href="{url site=$Site params=$params}" class="qui-tags-tag animated">
                             {$tag.title}
                         </a>
@@ -86,35 +89,68 @@
     <div class="quiqqer-tags-search-results">
         <h3>Ergebnis</h3>
 
-        {foreach $result as $Entry}
-        <article class="quiqqer-tags-search-result-entry">
-            <a href="{url site=$Entry}" class="quiqqer-tags-search-result-entry-link">
-                {if $Entry->getAttribute('image')}
-                    {image src=$Entry->getAttribute('image')
-                           class="quiqqer-tags-search-entry-image"
-                           width="100"
-                    }
-                {else}
-                <div class="quiqqer-tags-search-result-entry-imgplaceholder"
-                     style="background: url('{$Project->getMedia()->getPlaceholder()}') center center no-repeat"
-                        ></div>
-                {/if}
+        {if $count}
+        <p>
+            {if $max < $count}
+                {locale group="quiqqer/tags" var="message.site.result" start=$start+1 end=$max count=$count}
+            {else}
+                {locale group="quiqqer/tags" var="message.site.result" start=$start+1 end=$count count=$count}
+            {/if}
+        </p>
+        {/if}
 
-                <div class="quiqqer-tags-search-result-entry-text">
-                    <h4>{$Entry->getAttribute('title')}</h4>
-                    <p>{$Entry->getAttribute('short')}</p>
+
+        {control
+            control="\QUI\Controls\Sheets"
+            Site=$Site
+            sheets=$sheets
+            tags=$requestTagNames
+            showLimit=true
+            limit=$max
+        }
+
+        <div>
+            {foreach $result as $Entry}
+            <article class="quiqqer-tags-search-result-entry">
+                <a href="{url site=$Entry}" class="quiqqer-tags-search-result-entry-link">
+                    {if $Entry->getAttribute('image')}
+                        {image src=$Entry->getAttribute('image')
+                               class="quiqqer-tags-search-entry-image"
+                               width="100"
+                        }
+                    {else}
+                    <div class="quiqqer-tags-search-result-entry-imgplaceholder"
+                         style="background: url('{$Project->getMedia()->getPlaceholder()}') center center no-repeat"
+                            ></div>
+                    {/if}
+
+                    <div class="quiqqer-tags-search-result-entry-text">
+                        <h4>{$Entry->getAttribute('title')}</h4>
+                        <p>{$Entry->getAttribute('short')}</p>
+                    </div>
+                </a>
+
+                <div class="quiqqer-tags-search-result-entry-taglist">
+                    <span class="quiqqer-tags-search-result-entry-tagText">
+                        zugewiesene Tags:
+                    </span>
+                    {control assign=Control control="\QUI\Tags\Controls\SiteTags" Site=$Entry}
+                    {$Control->getBody()}
                 </div>
-            </a>
+            </article>
+            {foreachelse}
+                {locale group="quiqqer/tags" var="message.types.tag.no.entries.found"}
+            {/foreach}
+        </div>
 
-            <div class="quiqqer-tags-search-result-entry-taglist">
-                <span class="quiqqer-tags-search-result-entry-tagText">
-                    zugewiesene Tags:
-                </span>
-                {control assign=Control control="\QUI\Tags\Controls\SiteTags" Site=$Entry}
-                {$Control->getBody()}
-            </div>
-        </article>
-        {/foreach}
+        {control
+            control="\QUI\Controls\Sheets"
+            Site=$Site
+            sheets=$sheets
+            tags=$requestTagNames
+            showLimit=true
+            limit=$max
+        }
     </div>
 
 </section>
