bakground bei tag icon verbessert

--- a/types/tag-listing.html
+++ b/types/tag-listing.html
@@ -33,7 +33,7 @@
                         }
                     {else}
                     <div class="quiqqer-tags-list-result-entry-imgplaceholder"
-                         style="background: url('{$Project->getMedia()->getPlaceholder()}') center center no-repeat"
+                         style="background-url: url('{$Project->getMedia()->getPlaceholder()}')"
                             ></div>
                     {/if}
 
