refator: tag groups und tag search

--- a/bin/groups/Group.information.html
+++ b/bin/groups/Group.information.html
@@ -24,6 +24,16 @@
             <td>
                 <label class="field-container">
                     <span class="field-container-item">
+                        {{project}}
+                    </span>
+                    <div class="field-container-field quiqqer-tags-group-project"></div>
+                </label>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label class="field-container">
+                    <span class="field-container-item">
                         {{image}}
                     </span>
                     <input name="image" class="media-image field-container-field field-title"/>
