fix: quiqqer/package-tags#36

--- a/bin/search/Search.html
+++ b/bin/search/Search.html
@@ -7,6 +7,9 @@
     <option value="pqr">P Q R</option>
     <option value="stu">S T U</option>
     <option value="vz">V - Z</option>
+    <option value="123">0 - 9</option>
+    <option value="special">Sonderzeichen</option>
+    <option value="all">Alle</option>
 </select>
 
 <input type="search"
