--- a/bin/search/Search.html
+++ b/bin/search/Search.html
@@ -1,15 +1,15 @@
 <select class="quiqqer-tags-search-select">
-    <option value="abc">A B C</option>
-    <option value="def">D E F</option>
-    <option value="ghi">G H I</option>
-    <option value="jkl">J K L</option>
-    <option value="mno">M N O</option>
-    <option value="pqr">P Q R</option>
-    <option value="stu">S T U</option>
-    <option value="vz">V - Z</option>
-    <option value="123">0 - 9</option>
-    <option value="special">Sonderzeichen</option>
-    <option value="all">Alle</option>
+    <option value="abc">{{textABC}}</option>
+    <option value="def">{{textDEF}}</option>
+    <option value="ghi">{{textGHI}}</option>
+    <option value="jkl">{{textJKL}}</option>
+    <option value="mno">{{textMNO}}</option>
+    <option value="pqr">{{textPQR}}</option>
+    <option value="stu">{{textSTU}}</option>
+    <option value="vz">{{textVZ}}</option>
+    <option value="123">{{text123}}</option>
+    <option value="special">{{textSpecial}}</option>
+    <option value="all">{{textAll}}</option>
 </select>
 
 <input type="search"
