feat: Gruppen löschen / bearbeiten in Tabelle; Gruppen-Filter in Tag-Browser

--- a/bin/search/Search.html
+++ b/bin/search/Search.html
@@ -18,4 +18,8 @@
        placeholder="{{searchPlaceholder}}"
 />
 
+<select class="quiqqer-tags-search-group-select">
+    <option value="all">{{groupSelectOptionAll}}</option>
+</select>
+
 <div class="quiqqer-tags-search-result"></div>
