feat: tag-gruppen hierarchie #39

--- a/bin/groups/Group.information.html
+++ b/bin/groups/Group.information.html
@@ -44,6 +44,16 @@
             <td>
                 <label class="field-container">
                     <span class="field-container-item">
+                        {{parent}}
+                    </span>
+                    <div type="text" class="field-container-field quiqqer-tags-group-parent"></div>
+                </label>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label class="field-container">
+                    <span class="field-container-item">
                         {{image}}
                     </span>
                     <input name="image" class="media-image field-container-field field-title"/>
