--- a/bin/groups/Panel.createGroup.html
+++ b/bin/groups/Panel.createGroup.html
@@ -5,6 +5,11 @@
     </label>
 
     <label>
+        <span class="quiqqer-tags-groupsCreate-description">{{description}}</span>
+        <textarea name="desc" rows="5"></textarea>
+    </label>
+
+    <label>
         <span class="quiqqer-tags-groupsCreate-title">{{image}}</span>
         <input type="text" name="image" class="media-image"/>
     </label>
