--- a/bin/search/Search.html
+++ b/bin/search/Search.html
@@ -1,25 +1,24 @@
-<select class="quiqqer-tags-search-select">
-    <option value="abc">{{textABC}}</option>
-    <option value="def">{{textDEF}}</option>
-    <option value="ghi">{{textGHI}}</option>
-    <option value="jkl">{{textJKL}}</option>
-    <option value="mno">{{textMNO}}</option>
-    <option value="pqr">{{textPQR}}</option>
-    <option value="stu">{{textSTU}}</option>
-    <option value="vz">{{textVZ}}</option>
-    <option value="123">{{text123}}</option>
-    <option value="special">{{textSpecial}}</option>
-    <option value="all">{{textAll}}</option>
-</select>
+<div class="quiqqer-tags-search-tree"></div>
+<div class="quiqqer-tags-search-list">
+    <select class="quiqqer-tags-search-select">
+        <option value="abc">{{textABC}}</option>
+        <option value="def">{{textDEF}}</option>
+        <option value="ghi">{{textGHI}}</option>
+        <option value="jkl">{{textJKL}}</option>
+        <option value="mno">{{textMNO}}</option>
+        <option value="pqr">{{textPQR}}</option>
+        <option value="stu">{{textSTU}}</option>
+        <option value="vz">{{textVZ}}</option>
+        <option value="123">{{text123}}</option>
+        <option value="special">{{textSpecial}}</option>
+        <option value="all">{{textAll}}</option>
+    </select>
 
-<input type="search"
-       name="search"
-       class="quiqqer-tags-search-freetext"
-       placeholder="{{searchPlaceholder}}"
-/>
+    <input type="search"
+           name="search"
+           class="quiqqer-tags-search-freetext"
+           placeholder="{{searchPlaceholder}}"
+    />
 
-<select class="quiqqer-tags-search-group-select">
-    <option value="all">{{groupSelectOptionAll}}</option>
-</select>
-
-<div class="quiqqer-tags-search-result"></div>
+    <div class="quiqqer-tags-search-result"></div>
+</div>
