style: Tag-Gruppe hinzufügen Popup style

--- a/bin/groups/Panel.createGroup.html
+++ b/bin/groups/Panel.createGroup.html
@@ -1,16 +1,22 @@
 <form class="quiqqer-tags-groupsCreate">
     <label>
         <span class="quiqqer-tags-groupsCreate-title">{{title}}</span>
-        <input type="text" name="title"/>
+        <div class="quiqqer-tags-groupsCreate-input">
+            <input type="text" name="title"/>
+        </div>
     </label>
 
     <label>
         <span class="quiqqer-tags-groupsCreate-description">{{description}}</span>
-        <textarea name="desc" rows="5"></textarea>
+        <div class="quiqqer-tags-groupsCreate-input">
+            <textarea name="desc" rows="5"></textarea>
+        </div>
     </label>
 
     <label>
         <span class="quiqqer-tags-groupsCreate-title">{{image}}</span>
-        <input type="text" name="image" class="media-image"/>
+        <div class="quiqqer-tags-groupsCreate-input">
+            <input type="text" name="image" class="media-image"/>
+        </div>
     </label>
 </form>
