--- a/types/tag-search.html
+++ b/types/tag-search.html
@@ -105,7 +105,7 @@
     </div>
     {/if}
 
-    {if isset($smarty.get.tags)}
+    {if isset($smarty.get.tags) || count($requestTags)}
     <div class="quiqqer-tags-search-results">
         {if $Site->getAttribute('quiqqer.tag.settings.showAvailableTags')
             && $Site->getAttribute('quiqqer.tag.settings.showSelectedTags')
