--- a/types/tag-search.html
+++ b/types/tag-search.html
@@ -1,5 +1,5 @@
 
-{if $Template->getAttribute('content-header')}
+{*if $Template->getAttribute('content-header')}
 <section class="content-header grid-100 mobile-grid-100">
     <header>
         <h1>{$Site->getAttribute('title')}</h1>
@@ -11,7 +11,7 @@
     </div>
     {/if}
 </section>
-{/if}
+{/if*}
 
 {if $Template->getAttribute('content-body') && $Site->getAttribute('content')}
 <section class="content-body grid-100 mobile-grid-100">
@@ -19,7 +19,7 @@
 </section>
 {/if}
 
-<section class="content-template grid-100 mobile-grid-100 quiqqer-tags-search"
+<section class="content-template grid-100 mobile-grid-100 grid-parent quiqqer-tags-search"
         data-qui="package/quiqqer/tags/bin/TagSearch"
         >
 
