fix: FontAwesome als Bild in Tag Search wurde nicht beachtet

--- a/types/tag-search.html
+++ b/types/tag-search.html
@@ -225,7 +225,8 @@
 
 
 
-                    {*<a href="{url site=$Entry}" class="quiqqer-tags-search-result-entry-link">
+                    {*
+                    <a href="{url site=$Entry}" class="quiqqer-tags-search-result-entry-link">
                         <div class="quiqqer-tags-search-entry-image-div grid-25">
                             {if $Entry->getAttribute('image_site')}
                                 {image src=$Entry->getAttribute('image_site')
